[package]
name = "gotham_sample_rs"
version = "0.1.0"
authors = ["4832cl0n"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "~0.1"
hyper = "~0.11"
gotham = "~0.5"
gotham_derive = "~0.2"
mime = "~0.3"
r2d2 = "*"
r2d2_redis = "*"
redis = "*"
r2d2_postgres = "*"
postgres = "*"